feat(game): add element choice, telegraphed combat, upgrades, and save system - element moves from weapon to run-wide choice via EscolhaDeElemento screen - Investida extracted to shared class, all enemies use telegraphed melee strikes - enemy armor absorbs damage before HP, elemental particles match attack type - per-room difficulty scaling grows HP 7% and attack 4% - Melhoria upgrade card system with 8 upgrades and 4 rarity tiers - weapon class restriction per player character (Classe enum) - dash uses impulse deceleration instead of drag, adds afterimage trail - invulnerability frames of 24 ticks after taking damage - Transmutacao plays animation when element choice changes weapon - Corrida serializes run state between rooms with 3 save slots - Saves menu shows slots with cat/level/time, supports resume and delete - A* pathfinder removes threaded pathfinding, fixes tile unit conversion - Arena camera return counter decoupled from exit-look counter - Expressao separates hurt from concentrated eye expressions - Audio configs migrate old linear values to logarithmic curve on first run